--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ DATABASE=mongodb://localhost:27017/portfolio
 SECRET = SUPPERSECRETPASSWOR123
 PORT =4000
 URL=http://localhost:4000
+ADMIN_MAIL= yeasirbdtest1@gmail.com
+ADMIN_PASS = Aasfad!sfdas12
+MAILHOST = smtp.gmail.com
+MAILPORT = 587
